k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: speech-service
  labels:
    app.kubernetes.io/name: speech-service
