k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: speech-service
  namespace: speech-service
  labels:
    app.kubernetes.io/name: speech-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: speech-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
